[package]
name = "global_socioeconomic_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
plotlib = "0.4.0"
assert_cmd = "1.0"